@@ -1,8 +1,13 @@
 from zope.interface import implements
 from zope.component import adapts
 from Products.Reflecto.interfaces import IReflectoFile
-from textindexng.interfaces.indexable import IIndexableContent
-from textindexng.content import IndexContentCollector
+try:
+    from zopyx.txng3.core.interfaces import IIndexableContent
+    from zopyx.txng3.core.content import IndexContentCollector
+except ImportError:
+    from textindexng.interfaces.indexable import IIndexableContent
+    from textindexng.content import IndexContentCollector
+
 from Products.Reflecto import chardet
 
 class FileProxyIndexableContentAdapter(object):
